--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
     border-radius: 15px;
     overflow: hidden;
     margin-bottom:1.5rem ;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 }
 h1{
     font-family: 'Roboto', sans-serif;
@@ -81,15 +81,16 @@ hr{
     justify-content: center;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-   
+    background-clip: border-box;
+    
 }
+
 
 .header__details > ul{
     background-color: red;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    /* width:50%; */
     height:2rem;
     align-items: center;
     border-radius: 10px;
